Fix navbar z-index

--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 1000;
     .nav {
       height: 6rem;
       background-color: #fff;
